Fixed bug #25155 (Possible namespace conflict between mime-magic & mssql)