ext/mime_magic/php_mime_magic.h
@@ -15,7 +15,7 @@
   | Author:                                                              |
   +----------------------------------------------------------------------+
 
-  $Id: php_mime_magic.h,v 1.7 2003/06/10 20:03:32 imajes Exp $ 
+  $Id: php_mime_magic.h,v 1.8 2003/08/19 22:13:01 iliaa Exp $ 
 */
 
 #ifndef PHP_MIME_MAGIC_H
@@ -58,17 +58,6 @@ struct magic {
     unsigned char reln;		/* relation (0=eq, '>'=gt, etc) */
     char type;			/* int, short, long or string. */
     char vallen;		/* length of string value, if any */
-#define BYTE    1
-#define SHORT    2
-#define LONG    4
-#define STRING    5
-#define DATE    6
-#define BESHORT    7
-#define BELONG    8
-#define BEDATE    9
-#define LESHORT    10
-#define LELONG    11
-#define LEDATE    12
     union VALUETYPE {
 		unsigned char b;
 		unsigned short h;
